workloads/sdlc/zen/kubernetes/apps/mattermost/mattermost-ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: mattermost-service
  namespace: mattermost-sdlc
spec:
  selector:
    app: mattermost
    installation.mattermost.com/installation: mattermost
    installation.mattermost.com/resource: mattermost
  ports:
    - name: app
      port: 8065
      targetPort: 8065
      protocol: TCP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mattermost-ingress
  namespace: mattermost-sdlc
spec:
  ingressClassName: tailscale
  rules:
    - http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mattermost-service
                port:
                  number: 8065
  tls:
    - hosts:
        - mattermost-sdlc
